--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
                                         <ul id="navigation">                                                                                          
                                             <li><a href="index.html">Home</a></li>
                                             <li><a href="about.html">About</a></li>
-                                            <li><a href="services.html">Services</a></li>
+                                            <li><a href="training.html">Training</a></li>
+                                            <li><a href="services.html">Consultancy & More</a></li>
                                         </ul>
                                     </nav>
                                 </div>
@@ -105,6 +106,29 @@
                     <div class="row">
                         <div class="col-xl-8 col-lg-7 col-md-8">
                             <div class="hero__caption">
+                                <span data-animation="fadeInLeft" data-delay=".1s">Top Services</span>
+                                <h1 data-animation="fadeInLeft" data-delay=".5s" >Professional Training</h1>
+                                <p data-animation="fadeInLeft" data-delay=".9s">Get trained by industry leader<br> We offer tailored trainings suited for your needs.</p>
+                                <!-- Hero-btn -->
+                                <div class="hero__btn" data-animation="fadeInLeft" data-delay="1.1s">
+                                    <a href="about.html" class="btn hero-btn">About Us</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>          
+            </div>
+
+
+            
+            <div class="single-slider slider-height d-flex align-items-center">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-xl-8 col-lg-7 col-md-8">
+                            <div class="hero__caption">
+                                <span data-animation="fadeInLeft" data-delay=".1s">Top Services</span>
+                                <h1 data-animation="fadeInLeft" data-delay=".5s" >Consultancy</h1>
+                                <p data-animation="fadeInLeft" data-delay=".9s">Consultancy on data analytics and Business Intelligence projects</p>
                                       <!-- Hero-btn -->
                                 <div class="hero__btn" data-animation="fadeInLeft" data-delay="1.1s">
                                     <a href="about.html" class="btn hero-btn">About Us</a>
@@ -120,51 +144,117 @@
     </div>
     <!-- slider Area End-->
     <!--? Categories Area Start -->
-    <div class="categories-area section-padding30">
+    <div class="categories-area section-padding 30">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
                     <!-- Section Tittle -->
                     <div class="section-tittle mb-70">
-                        <span>Our Top Services</span>
-                        <h2>Our Best Services</h2>
+                        <span>Our Services</span>
+                        <h2>1. Trainings</h2>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-lg-3 col-md-6 col-sm-6">
+                    <div class="single-cat text-center mb-50">
+                        <div class="cat-cap">
+                            <h5><a href="training.html#BI">Business Intelligence</a></h5>
+                            <p>Get equipped with the tools and techniques to collect, analyze, and present data. </p>
+                            <a href="training.html#BI" class="more-btn">View Course structure</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-6">
+                    <div class="single-cat text-center mb-50">
+                        <div class="cat-cap">
+                            <h5><a href="training.html#FM">Financial management </a></h5>
+                            <p>Training in strategic planning, organizing and controlling of business finances.</p>
+                            <a href="training.html#FM" class="more-btn">View Course structure</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-6">
+                    <div class="single-cat text-center mb-50">
+                        <div class="cat-cap">
+                            <h5><a href="training.html#Energy">Energy Sector Professional Training</a></h5>
+                            <p>Get equipped with all you need to know in the energy sector. </p>
+                            <a href="training.html#Energy" class="more-btn">View Course structure</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-6">
+                    <div class="single-cat text-center mb-50">
+                        <div class="cat-cap">
+                            <h5><a href="training.html#OS">Occupational Safety & Health Management</a></h5>
+                            <p>Training in identifying safety hazards & hazard control in the workplace.</p>
+                            <a href="training.html#OS" class="more-btn">View Course structure</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-6">
+                    <div class="single-cat text-center mb-50">
+                        <div class="cat-cap">
+                            <h5><a href="training.html#OFA">Occupational First Aid</a></h5>
+                            <p>Training in recognizing hazards and respond to emergencies common in workplaces</p>
+                            <a href="training.html#OFA" class="more-btn">View Course structure</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-6">
+                    <div class="single-cat text-center mb-50">
+                        <div class="cat-cap">
+                            <h5><a href="training.html#FS">Fire Safety Management</a></h5>
+                            <p>This course is designed to give awareness on how to prevent, suppress and evacuate in the case of a fire outbreak.</p>
+                            <a href="training.html#FS" class="more-btn">View Course structuree</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-6">
+                    <div class="single-cat text-center mb-50">
+                        <div class="cat-cap">
+                            <h5><a href="training.html#disa">Disaster Preparedness</a></h5>
+                            <p>Training on measures undertaken in advance to better respond and cope with the immediate aftermath of a disaster.</p>
+                            <a href="training.html#disa" class="more-btn">View Course structure</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-6">
+                    <div class="single-cat text-center mb-50">
+                        <div class="cat-cap">
+                            <h5><a href="training.html#EG">Enhance Gender & Communication Skills for Professionals</a></h5>
+                            <p>Bridge the gender communication gap in the workplace</p>
+                            <a href="training.html#EG" class="more-btn">View Course structure</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-6">
+                    <div class="single-cat text-center mb-50">
+                        <div class="cat-cap">
+                            <h5><a href="training.html#Isec">Information Security </a></h5>
+                            <p>Professional training to protect your organization's systems and data.</p>
+                            <a href="training.html#Isec" class="more-btn">View Course structure</a>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <!-- Section Tittle -->
+                    <div class="section-tittle mb-70">
+                        <h2>2. Managed Services</h2>
+                        <h4>Data analytics as a Managed Service for those who wish to outsource the Business Intelligence service <a style="color:blue;" href="services.html">read More</a></h4>
                     </div>
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-4 col-md-6 col-sm-6">
-                    <div class="single-cat text-center mb-50">
-                        <div class="cat-icon">
-                            <span class="flaticon-development"></span>
-                        </div>
-                        <div class="cat-cap">
-                            <h5><a href="services.html">Data Analytics </a></h5>
-                            <p>Data analytics as a Managed Service for those who wish to outsource the Business Intelligence service  </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 col-sm-6">
-                    <div class="single-cat text-center mb-50">
-                        <div class="cat-icon">
-                            <span class="flaticon-result"></span>
-                        </div>
-                        <div class="cat-cap">
-                            <h5><a href="services.html">Consultancy</a></h5>
-                            <p> Consultancy on data analytics and Business Intelligence projects   </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 col-sm-6">
-                    <div class="single-cat text-center mb-50">
-                        <div class="cat-icon">
-                            <span class="flaticon-team"></span>
-                        </div>
-                        <div class="cat-cap">
-                            <h5><a href="services.html">Training</a></h5>
-                            <p>Data Engineering; Data Analysis and Visualization using 
-                                Power BI; DAX programming 
-                                 </p>
-                        </div>
+                <div class="col-lg-12">
+                    <!-- Section Tittle -->
+                    <div class="section-tittle mb-70">
+                        <h2>3. Consultancy</h2>
+                        <h4> Consultancy on data analytics and Business Intelligence projects <a style="color:blue;" href="services.html">read More</a></h4>
                     </div>
                 </div>
             </div>
@@ -201,67 +291,7 @@
         </div>
     </div>
     <!-- About Area End-->
-    <!--? Services Ara Start -->
-    <div class="services-area section-padding3">
-        <div class="container">
-            <div class="row">
-                <div class="cl-xl-7 col-lg-8 col-md-10">
-                    <!-- Section Tittle -->
-                    <div class="section-tittle mb-70">
-                        <span>Our portfolio</span>
-                        <h4>Data analytics can be applied to any enterprise aiming to convert
-                             data into a strategic asset. We offer our analytics solutions to below industries among others: </h4>
-                    </div> 
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-6 col-md-6 col-sm-10">
-                    <div class="single-services mb-100">
-                            <div class="services-caption">
-                            <span></span>
-                            <p><a href="#">Financial Services</a></p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-6 col-md-6 col-sm-10">
-                    <div class="single-services mb-100">
-                            <div class="services-caption">
-                            <span></span>
-                            <p><a href="#">Humanitarian organizations</a></p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-6 col-md-6 col-sm-10">
-                    <div class="single-services mb-100">
-                            <div class="services-caption">
-                            <span></span>
-                            <p><a href="#">Research Institutions</a></p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-6 col-md-6 col-sm-10">
-                    <div class="single-services mb-100">
-                            <div class="services-caption">
-                            <span></span>
-                            <p><a href="#">Consultancies</a></p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-lg-6 col-md-6 col-sm-10">
-                    <div class="single-services mb-100">
-                            <div class="services-caption">
-                            <span></span>
-                            <p><a href="#">FMCG</a></p>
-                        </div>
-                    </div>
-                </div>
-
-
-            </div>
-        </div>
-    </div>
-    <!-- Services Ara End -->
+ 
     <!--? Testimonial Start -->
     <div class="testimonial-area testimonial-padding" data-background="assets/img/gallery/section_bg04.jpg">
         <div class="container ">
@@ -376,7 +406,7 @@
                             <div class="footer-number">
                                 <h4><span>+254 </span>724 476914</h4>
                                 <h4><span>+254 </span>737 357906</h4>
-                                <p>elkhamasi@gmail.com OR edwin.lumiti@pelletsdata.co.ke </p>
+                                <p>edwin.lumiti@pelletsdata.co.ke </p>
                                 
                             </div>
                         </div>
