--- a/services.html
+++ b/services.html
@@ -78,7 +78,8 @@
                                             <ul id="navigation">                                                                                          
                                                 <li><a href="index.html">Home</a></li>
                                                 <li><a href="about.html">About</a></li>
-                                                <li><a href="services.html">Services</a></li>
+                                                <li><a href="training.html">Training</a></li>
+                                                <li><a href="services.html">Consultancy & More</a></li>
                                             </ul>
                                         </nav>
                                     </div>
@@ -96,65 +97,67 @@
         <!-- Header End -->
     </header>
     <main>
-
-        <!--? Categories Area Start -->
-        <div class="categories-area section-padding 5">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-12">
-                        <!-- Section Tittle -->
-                        <div class="section-tittle mb-30">
-                            <span>Services</span>
-                            <h2>More about our Services</h2>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-4 col-md-6 col-sm-6">
-                        <div class="single-cat text-center mb-50">
-                            <div class="cat-icon">
-                                <span class="flaticon-development"></span>
-                            </div>
-                            <div class="cat-cap">
-                                <h5><a href="services.html">Artificial intelligence </a></h5>
-                                <p>Pellets Data Analysts uses Microsoft Power BI for data analysis and visualization.
-                                    Power BI has in-built AI visualizations (Decomposition Tree, Key Influencer, Q&A)
-                                    to aid your investigation into data.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 col-sm-6">
-                        <div class="single-cat text-center mb-50">
-                            <div class="cat-icon">
-                                <span class="flaticon-result"></span>
-                            </div>
-                            <div class="cat-cap">
-                                <h5><a href="services.html">Business Intelligence</a></h5>
-                                <p>In a fast-paced business environment, decisions are made on the move. Using our Power BI dashboards,
-                                     you have a complete and unified source of business truth and you can easily share insights across your organization.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 col-sm-6">
-                        <div class="single-cat text-center mb-50">
-                            <div class="cat-icon">
-                                <span class="flaticon-team"></span>
-                            </div>
-                            <div class="cat-cap">
-                                <h5><a href="services.html">Data Security</a></h5>
-                                <p>Security is a major concern in today’s
-                                    interconnected world. Power BI has inbuilt data
-                                    access controls and encryption. At the most
-                                    basic level, reports can only be accessed using
-                                    official company logins.</p>
-                            </div>
-                        </div>
-                    </div>
-                
+            <!--? Services Ara Start -->
+    <div class="services-area section-padding 3">
+        <div class="container">
+            <div class="row">
+                <div class="cl-xl-7 col-lg-8 col-md-10">
+                    <!-- Section Tittle -->
+                    <div class="section-tittle mb-70">
+                        <span>Our portfolio</span>
+                        <h4>Data analytics can be applied to any enterprise aiming to convert
+                             data into a strategic asset. We offer our analytics solutions to below industries among others: </h4>
+                    </div> 
                 </div>
             </div>
+            <div class="row">
+                <div class="col-lg-6 col-md-6 col-sm-10">
+                    <div class="single-services mb-100">
+                            <div class="services-caption">
+                            <span></span>
+                            <p><a href="#">Financial Services</a></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-6 col-sm-10">
+                    <div class="single-services mb-100">
+                            <div class="services-caption">
+                            <span></span>
+                            <p><a href="#">Humanitarian organizations</a></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-6 col-sm-10">
+                    <div class="single-services mb-100">
+                            <div class="services-caption">
+                            <span></span>
+                            <p><a href="#">Research Institutions</a></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-6 col-sm-10">
+                    <div class="single-services mb-100">
+                            <div class="services-caption">
+                            <span></span>
+                            <p><a href="#">Consultancies</a></p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-6 col-md-6 col-sm-10">
+                    <div class="single-services mb-100">
+                            <div class="services-caption">
+                            <span></span>
+                            <p><a href="#">FMCG</a></p>
+                        </div>
+                    </div>
+                </div>
+
+
+            </div>
         </div>
-        <!-- Services Area End -->
+    </div>
+    <!-- Services Ara End -->
     </main>
     <footer>
         <!--? Footer Start-->
@@ -206,7 +209,7 @@
                                 <div class="footer-number">
                                     <h4><span>+254 </span>724 476914</h4>
                                     <h4><span>+254 </span>737 357906</h4>
-                                    <p>elkhamasi@gmail.com OR edwin.lumiti@pelletsdata.co.ke </p>
+                                    <p>edwin.lumiti@pelletsdata.co.ke </p>
                                     
                                 </div>
                             </div>
